# alkashka-scrapy

./: README.md  pyproject.toml  testovoe.md
alkashka/: result.json  scrapy.cfg
alkashka/alkashka/: items.py  patch_orjson_as_json.py  settings.py
alkashka/alkashka/fake_useragent_middleware/: __init__.py  providers.py
alkashka/alkashka/spiders/: alkashka_spider.py  models.py
