[project]
name = "alkashka-scrapy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fake-useragent>=2.2.0",
    "faker>=37.1.0",
    "orjson>=3.10.16",
    "pydantic>=2.11.3",
    "scrapy>=2.12.0",
    "scrapy-rotating-proxies>=0.6.2",
]

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "ruff>=0.11.7",
]
